[FIX] Add wrap in header sections

--- a/src/pages/create-form/form-board/FormBoard.module.css
+++ b/src/pages/create-form/form-board/FormBoard.module.css
@@ -61,6 +61,8 @@
 
 .header_section {
   display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
   align-items: center;
   justify-content: space-between;
   width: 100%;
